--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -303,4 +303,6 @@ jobs:
       - name: Run compress binary
         run: make compress
       - name: Run make reviewable
-        run: make reviewable
+        run: |
+          go install cuelang.org/go/cmd/cue@latest
+          make reviewable
