--- a/.github/workflows/registry.yml
+++ b/.github/workflows/registry.yml
@@ -145,6 +145,6 @@ jobs:
         run: ./ossutil --config-file .ossutilconfig sync oss://$CAPABILITY_BUCKET $CAPABILITY_DIR
       - name: rsync all capabilites
         run: |
-          rsync registry/* $CAPABILITY_DIR
+          rsync vela-templates/registry/auto-gen/* $CAPABILITY_DIR
       - name: sync local to cloud
         run: ./ossutil --config-file .ossutilconfig sync $CAPABILITY_DIR oss://$CAPABILITY_BUCKET -f
