--- a/charts/vela-core/values.yaml
+++ b/charts/vela-core/values.yaml
@@ -81,6 +81,8 @@ admissionWebhooks:
 #Enable debug logs for development purpose
 logDebug: false
 
+logFilePath: ""
+
 systemDefinitionNamespace: vela-system
 
 applicationRevisionLimit: 10
