--- a/charts/vela-core/values.yaml
+++ b/charts/vela-core/values.yaml
@@ -81,7 +81,12 @@ admissionWebhooks:
 #Enable debug logs for development purpose
 logDebug: false
 
+#If non-empty, write log files in this path
 logFilePath: ""
+
+#Defines the maximum size a log file can grow to. Unit is megabytes.
+#If the value is 0, the maximum file size is unlimited.
+logFileMaxSize: 1024
 
 systemDefinitionNamespace: vela-system
 
