organize registry directory (#1733)
* organize registry directory

* fix cue not found

* install cue

* move definitions to and to-be-generated cue&yaml to root directory

* fix publish registry dir

* fix duplication of cue install

* try again

* try again

--- a/.github/workflows/registry.yml
+++ b/.github/workflows/registry.yml
@@ -144,7 +144,6 @@ jobs:
       - name: sync capabilities bucket to local
         run: ./ossutil --config-file .ossutilconfig sync oss://$CAPABILITY_BUCKET $CAPABILITY_DIR
       - name: rsync all capabilites
-        run: |
-          rsync docs/examples/registry/* $CAPABILITY_DIR
+        run:  rsync vela-templates/registry/auto-gen/* $CAPABILITY_DIR
       - name: sync local to cloud
         run: ./ossutil --config-file .ossutilconfig sync $CAPABILITY_DIR oss://$CAPABILITY_BUCKET -f
