add doc, gen yaml

--- a/charts/vela-core/templates/defwithtemplate/worker.yaml
+++ b/charts/vela-core/templates/defwithtemplate/worker.yaml
@@ -36,12 +36,8 @@ spec:
         						command: parameter.cmd
         					}
         
-        					if parameter["volumes"] != _|_ {
-        						volumeMounts: [ for v in parameter.volumes {
-        							{
-        								mountPath: v.mountPath
-        								name:      v.name
-        							}}]
+        					if parameter["env"] != _|_ {
+        						env: parameter.env
         					}
         
         					if parameter["cpu"] != _|_ {
@@ -60,6 +56,14 @@ spec:
         							requests:
         								memory: parameter.memory
         						}
+        					}
+        
+        					if parameter["volumes"] != _|_ {
+        						volumemounts: [ for v in parameter.volumes {
+        							{
+        								mountPath: v.mountPath
+        								name:      v.name
+        							}}]
         					}
         
         					if parameter["livenessProbe"] != _|_ {
@@ -115,8 +119,34 @@ spec:
         	// +usage=Which image would you like to use for your service
         	// +short=i
         	image: string
+        
         	// +usage=Commands to run in the container
         	cmd?: [...string]
+        
+        	// +usage=Define arguments by using environment variables
+        	env?: [...{
+        		// +usage=Environment variable name
+        		name: string
+        		// +usage=The value of the environment variable
+        		value?: string
+        		// +usage=Specifies a source the value of this var should come from
+        		valueFrom?: {
+        			// +usage=Selects a key of a secret in the pod's namespace
+        			secretKeyRef: {
+        				// +usage=The name of the secret in the pod's namespace to select from
+        				name: string
+        				// +usage=The key of the secret to select from. Must be a valid secret key
+        				key: string
+        			}
+        		}
+        	}]
+        
+        	// +usage=Number of CPU units for the service, like `0.5` (0.5 CPU core), `1` (1 CPU core)
+        	cpu?: string
+        
+        	// +usage=Specifies the attributes of the memory resource required for the container.
+        	memory?: string
+        
         	// +usage=Declare volumes and volumeMounts
         	volumes?: [...{
         		name:      string
@@ -148,12 +178,6 @@ spec:
         			medium: *"" | "Memory"
         		}
         	}]
-        
-        	// +usage=Number of CPU units for the service, like `0.5` (0.5 CPU core), `1` (1 CPU core)
-        	cpu?: string
-        
-        	// +usage=Specifies the attributes of the memory resource required for the container.
-        	memory?: string
         
         	// +usage=Instructions for assessing whether the container is alive.
         	livenessProbe?: #HealthProbe
