--- a/charts/vela-core/templates/defwithtemplate/worker.yaml
+++ b/charts/vela-core/templates/defwithtemplate/worker.yaml
@@ -59,7 +59,7 @@ spec:
         					}
         
         					if parameter["volumes"] != _|_ {
-        						volumemounts: [ for v in parameter.volumes {
+        						volumeMounts: [ for v in parameter.volumes {
         							{
         								mountPath: v.mountPath
         								name:      v.name
