--- a/charts/vela-core/templates/defwithtemplate/webservice.yaml
+++ b/charts/vela-core/templates/defwithtemplate/webservice.yaml
@@ -141,7 +141,7 @@ spec:
         	// +usage=Number of CPU units for the service, like `0.5` (0.5 CPU core), `1` (1 CPU core)
         	cpu?: string
         
-        	// If addRevisionLabel is true, the appRevision label will be added to the underlying pods 
+        	// +ignore If addRevisionLabel is true, the appRevision label will be added to the underlying pods
         	addRevisionLabel: *false | bool
         
         	// +usage=Declare volumes and volumeMounts
