--- a/charts/vela-core/values.yaml
+++ b/charts/vela-core/values.yaml
@@ -91,3 +91,9 @@ systemDefinitionNamespace: vela-system
 applicationRevisionLimit: 10
 
 definitionRevisionLimit: 20
+
+# concurrentReconciles is the concurrent reconcile number of the controller
+concurrentReconciles: 4
+
+# dependCheckWait is the time to wait for ApplicationConfiguration's dependent-resource ready
+dependCheckWait: 30s
