--- a/docs/examples/deployment-rollout/app-rollout-scale.yaml
+++ b/docs/examples/deployment-rollout/app-rollout-scale.yaml
@@ -4,15 +4,11 @@ metadata:
   name: rolling-test
 spec:
   # application (revision) reference
-  targetAppRevisionName: test-rolling-v2
-  sourceAppRevisionName: test-rolling-v1
-  # HPA reference (optional)
+  targetAppRevisionName: test-rolling-v1
   componentList:
     - metrics-provider
   rolloutPlan:
     rolloutStrategy: "IncreaseFirst"
     rolloutBatches:
-      - replicas: 10%
-      - replicas: 2
-      - replicas: 2
-    batchPartition: 1
+      - replicas: 4
+    targetSize: 5
