--- a/.github/workflows/release-docs.yaml
+++ b/.github/workflows/release-docs.yaml
@@ -18,7 +18,7 @@ jobs:
         with:
           python-version: '3.7'
       - name: Clean md files
-        run: python ./hack/website/clean-md.py ./docs/en
+        run: python ./hack/website/format.py markdown ./docs/en
       - name: Sync to kubevela.io Repo
         env:
           SSH_DEPLOY_KEY: ${{ secrets.GH_PAGES_DEPLOY }}
