--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -132,7 +132,7 @@ jobs:
         with:
           python-version: "3.7"
       - name: Clean md files
-        run: python ./hack/website/clean-md.py ./docs/en
+        run: python ./hack/website/format.py markdown ./docs/en
       - name: Sync release to kubevela.io Repo
         env:
           SSH_DEPLOY_KEY: ${{ secrets.GH_PAGES_DEPLOY }}
