fix some yaml in registry and link to file

--- a/vela-templates/registry/auto-gen/dynamic-sa.yaml
+++ b/vela-templates/registry/auto-gen/dynamic-sa.yaml
@@ -4,7 +4,7 @@ kind: TraitDefinition
 metadata:
   annotations:
     definition.oam.dev/description: "dynamically specify service account"
-  name: service-account
+  name: dynamic-sa
 spec:
   appliesToWorkloads:
     - deployments.apps
