--- a/vela-templates/registry/auto-gen/expose.yaml
+++ b/vela-templates/registry/auto-gen/expose.yaml
@@ -8,7 +8,8 @@ spec:
   podDisruptive: false
   schematic:
     cue:
-      template: |-        parameter: {
+      template: |-
+        parameter: {
         	domain: string
         	http: [string]: int
         }
