--- a/vela-templates/registry/definitions/dynamic-sa.yaml
+++ b/vela-templates/registry/definitions/dynamic-sa.yaml
@@ -3,7 +3,7 @@ kind: TraitDefinition
 metadata:
   annotations:
     definition.oam.dev/description: "dynamically specify service account"
-  name: service-account
+  name: dynamic-sa
 spec:
   appliesToWorkloads:
     - deployments.apps
