--- a/.github/workflows/registry.yml
+++ b/.github/workflows/registry.yml
@@ -144,4 +144,4 @@ jobs:
       - name: cp all capabilites
         run:  cp vela-templates/registry/auto-gen/* $CAPABILITY_DIR
       - name: sync local to cloud
-        run: ./ossutil --config-file .ossutilconfig sync $CAPABILITY_DIR oss://$CAPABILITY_BUCKET -f
+        run: ./ossutil --config-file .ossutilconfig sync $CAPABILITY_DIR oss://$CAPABILITY_BUCKET -f --delete
