--- a/charts/vela-core/templates/defwithtemplate/labels.yaml
+++ b/charts/vela-core/templates/defwithtemplate/labels.yaml
@@ -8,8 +8,8 @@ metadata:
   namespace: {{.Values.systemDefinitionNamespace}}
 spec:
   appliesToWorkloads:
-    - webservice
-    - worker
+    - deployments.apps
+  podDisruptive: true
   schematic:
     cue:
       template: |-
