fix the problems encountered during the test:
* ignore the parsing failure caused by the existing application without definition when checking;

* after the addition is successful, the resources left by the helm test are automatically cleaned up;

--- a/charts/vela-core/templates/test/test-application.yaml
+++ b/charts/vela-core/templates/test/test-application.yaml
@@ -3,6 +3,7 @@ kind: Application
 metadata:
   annotations:
     helm.sh/hook: test-success
+    helm.sh/hook-delete-policy: hook-succeeded
   name: helm-test-vela-app
 spec:
   components:
@@ -24,6 +25,7 @@ metadata:
   name: "{{ .Release.Name }}-application-test"
   annotations:
     "helm.sh/hook": test
+    helm.sh/hook-delete-policy: hook-succeeded
 spec:
   serviceAccountName: kubevela-vela-core
   containers:
