--- a/charts/oam-runtime/templates/oam-runtime-controller.yaml
+++ b/charts/oam-runtime/templates/oam-runtime-controller.yaml
@@ -4,9 +4,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "kubevela.serviceAccountName" . }}
+  name: {{ include "oam-runtime.serviceAccountName" . }}
   labels:
-    {{- include "kubevela.labels" . | nindent 4 }}
+    {{- include "oam-runtime.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
   {{- toYaml . | nindent 4 }}
@@ -18,14 +18,14 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ include "kubevela.fullname" . }}:manager-rolebinding
+  name: {{ include "oam-runtime.fullname" . }}:manager-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: "cluster-admin"
 subjects:
   - kind: ServiceAccount
-    name: {{ include "kubevela.serviceAccountName" . }}
+    name: {{ include "oam-runtime.serviceAccountName" . }}
     namespace: {{ .Release.Namespace }}
 
 ---
@@ -33,7 +33,7 @@ subjects:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ include "kubevela.fullname" . }}:leader-election-role
+  name: {{ include "oam-runtime.fullname" . }}:leader-election-role
 rules:
   - apiGroups:
       - ""
@@ -66,38 +66,38 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ include "kubevela.fullname" . }}:leader-election-rolebinding
+  name: {{ include "oam-runtime.fullname" . }}:leader-election-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: {{ include "kubevela.fullname" . }}:leader-election-role
+  name: {{ include "oam-runtime.fullname" . }}:leader-election-role
 subjects:
   - kind: ServiceAccount
-    name: {{ include "kubevela.serviceAccountName" . }}
+    name: {{ include "oam-runtime.serviceAccountName" . }}
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "kubevela.fullname" . }}
+  name: {{ include "oam-runtime.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-  {{- include "kubevela.labels" . | nindent 4 }}
+  {{- include "oam-runtime.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-  {{- include "kubevela.selectorLabels" . | nindent 6 }}
+  {{- include "oam-runtime.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
-    {{- include "kubevela.selectorLabels" . | nindent 8 }}
+    {{- include "oam-runtime.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
       {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "kubevela.serviceAccountName" . }}
+      serviceAccountName: {{ include "oam-runtime.serviceAccountName" . }}
       securityContext:
       {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
@@ -118,7 +118,6 @@ spec:
             - "--use-webhook=true"
             - "--webhook-port={{ .Values.webhookService.port }}"
             - "--webhook-cert-dir={{ .Values.admissionWebhooks.certificate.mountPath }}"
-            - "--autogen-workload-definition={{ .Values.admissionWebhooks.autoGenWorkloadDefinition }}"
             {{ end }}
             - "--health-addr=:{{ .Values.healthCheck.port }}"
             - "--apply-once-only={{ .Values.applyOnceOnly }}"
@@ -126,8 +125,6 @@ spec:
             - "--disable-caps={{ .Values.disableCaps }}"
             {{ end }}
             - "--system-definition-namespace={{ .Values.systemDefinitionNamespace }}"
-            - "--application-revision-limit={{ .Values.applicationRevisionLimit }}"
-            - "--definition-revision-limit={{ .Values.definitionRevisionLimit }}"
             - "--oam-spec-ver={{ .Values.OAMSpecVer }}"
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
           imagePullPolicy: {{ quote .Values.image.pullPolicy }}
@@ -163,7 +160,7 @@ spec:
         - name: tls-cert-vol
           secret:
             defaultMode: 420
-            secretName: {{ template "kubevela.fullname" . }}-admission
+            secretName: {{ template "oam-runtime.fullname" . }}-admission
       {{ end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
