--- a/charts/vela-core/crds/standard.oam.dev_podspecworkloads.yaml
+++ b/charts/vela-core/crds/standard.oam.dev_podspecworkloads.yaml
@@ -753,6 +753,7 @@ spec:
                                 description: If specified, this must be an IANA_SVC_NAME and unique within the pod. Each named port in a pod must have a unique name. Name for the port that can be referred to by services.
                                 type: string
                               protocol:
+                                default: TCP
                                 description: Protocol for port. Must be UDP, TCP, or SCTP. Defaults to "TCP".
                                 type: string
                             required:
@@ -1482,6 +1483,7 @@ spec:
                                 description: If specified, this must be an IANA_SVC_NAME and unique within the pod. Each named port in a pod must have a unique name. Name for the port that can be referred to by services.
                                 type: string
                               protocol:
+                                default: TCP
                                 description: Protocol for port. Must be UDP, TCP, or SCTP. Defaults to "TCP".
                                 type: string
                             required:
@@ -2219,6 +2221,7 @@ spec:
                                 description: If specified, this must be an IANA_SVC_NAME and unique within the pod. Each named port in a pod must have a unique name. Name for the port that can be referred to by services.
                                 type: string
                               protocol:
+                                default: TCP
                                 description: Protocol for port. Must be UDP, TCP, or SCTP. Defaults to "TCP".
                                 type: string
                             required:
