add application component name duplication check in webhook (#1811)
* add application component name duplication check in webhook

* Helm test will not clean up the test data, and the application test of the component with the same name created failed during e2e.

* fix the problems encountered during the test:

* ignore the parsing failure caused by the existing application without definition when checking;

* after the addition is successful, the resources left by the helm test are automatically cleaned up;

Co-authored-by: chwetion <chwetion@foxmail.com>

--- a/charts/vela-core/templates/test/test-application.yaml
+++ b/charts/vela-core/templates/test/test-application.yaml
@@ -3,10 +3,11 @@ kind: Application
 metadata:
   annotations:
     helm.sh/hook: test-success
-  name: first-vela-app
+    helm.sh/hook-delete-policy: hook-succeeded
+  name: helm-test-vela-app
 spec:
   components:
-    - name: express-server
+    - name: helm-test-express-server
       type: webservice
       properties:
         image: crccheck/hello-world
@@ -24,6 +25,7 @@ metadata:
   name: "{{ .Release.Name }}-application-test"
   annotations:
     "helm.sh/hook": test
+    helm.sh/hook-delete-policy: hook-succeeded
 spec:
   serviceAccountName: kubevela-vela-core
   containers:
@@ -40,16 +42,16 @@ spec:
           echo "Waiting application is ready..."
 
           echo "waiting for application being Applied"
-          kubectl -n vela-system wait --for=condition=Applied application first-vela-app --timeout=3m
+          kubectl -n vela-system wait --for=condition=Applied application helm-test-vela-app --timeout=3m
           echo "application being Applied"
 
           # wait for deploy being created
           echo "waiting for deployment being available"
-          kubectl -n vela-system wait --for=condition=available deploy express-server --timeout 3m
+          kubectl -n vela-system wait --for=condition=available deploy helm-test-express-server --timeout 3m
           echo "deployment being available"
 
           # wait for ingress being created
-          while ! [ `kubectl -n vela-system get ing express-server | grep -v NAME | wc -l` = 1 ]; do
+          while ! [ `kubectl -n vela-system get ing helm-test-express-server | grep -v NAME | wc -l` = 1 ]; do
             echo "waiting for ingress being created"
             sleep 1
           done
