--- a/vela-templates/addons/fluxcd/resource/crds/git-repo.yaml
+++ b/vela-templates/addons/fluxcd/resource/crds/git-repo.yaml
@@ -2,10 +2,9 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
-  creationTimestamp: null
+    controller-gen.kubebuilder.io/version: v0.5.0
   labels:
-    app.kubernetes.io/instance: vela-system
+    app.kubernetes.io/instance: flux-system
   name: gitrepositories.source.toolkit.fluxcd.io
 spec:
   group: source.toolkit.fluxcd.io
@@ -13,6 +12,8 @@ spec:
     kind: GitRepository
     listKind: GitRepositoryList
     plural: gitrepositories
+    shortNames:
+      - gitrepo
     singular: gitrepository
   scope: Namespaced
   versions:
@@ -35,10 +36,14 @@ spec:
           description: GitRepository is the Schema for the gitrepositories API
           properties:
             apiVersion:
-              description: "APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources"
+              description: 'APIVersion defines the versioned schema of this representation
+              of an object. Servers should convert recognized schemas to the latest
+              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
               type: string
             kind:
-              description: "Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds"
+              description: 'Kind is a string value representing the REST resource this
+              object represents. Servers may infer this from the endpoint the client
+              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
               type: string
             metadata:
               type: object
@@ -47,36 +52,78 @@ spec:
               properties:
                 gitImplementation:
                   default: go-git
-                  description: Determines which git client library to use. Defaults to go-git, valid values are ('go-git', 'libgit2').
+                  description: Determines which git client library to use. Defaults
+                    to go-git, valid values are ('go-git', 'libgit2').
                   enum:
                     - go-git
                     - libgit2
                   type: string
                 ignore:
-                  description: Ignore overrides the set of excluded patterns in the .sourceignore format (which is the same as .gitignore). If not provided, a default will be used, consult the documentation for your version to find out what those are.
+                  description: Ignore overrides the set of excluded patterns in the
+                    .sourceignore format (which is the same as .gitignore). If not provided,
+                    a default will be used, consult the documentation for your version
+                    to find out what those are.
                   type: string
+                include:
+                  description: Extra git repositories to map into the repository
+                  items:
+                    description: GitRepositoryInclude defines a source with a from and
+                      to path.
+                    properties:
+                      fromPath:
+                        description: The path to copy contents from, defaults to the
+                          root directory.
+                        type: string
+                      repository:
+                        description: Reference to a GitRepository to include.
+                        properties:
+                          name:
+                            description: Name of the referent
+                            type: string
+                        required:
+                          - name
+                        type: object
+                      toPath:
+                        description: The path to copy contents to, defaults to the name
+                          of the source ref.
+                        type: string
+                    required:
+                      - repository
+                    type: object
+                  type: array
                 interval:
                   description: The interval at which to check for repository updates.
                   type: string
+                recurseSubmodules:
+                  description: When enabled, after the clone is created, initializes
+                    all submodules within, using their default settings. This option
+                    is available only when using the 'go-git' GitImplementation.
+                  type: boolean
                 ref:
-                  description: The Git reference to checkout and monitor for changes, defaults to master branch.
+                  description: The Git reference to checkout and monitor for changes,
+                    defaults to master branch.
                   properties:
                     branch:
                       default: master
                       description: The Git branch to checkout, defaults to master.
                       type: string
                     commit:
-                      description: The Git commit SHA to checkout, if specified Tag filters will be ignored.
+                      description: The Git commit SHA to checkout, if specified Tag
+                        filters will be ignored.
                       type: string
                     semver:
-                      description: The Git tag semver expression, takes precedence over Tag.
+                      description: The Git tag semver expression, takes precedence over
+                        Tag.
                       type: string
                     tag:
                       description: The Git tag to checkout, takes precedence over Branch.
                       type: string
                   type: object
                 secretRef:
-                  description: The secret name containing the Git credentials. For HTTPS repositories the secret must contain username and password fields. For SSH repositories the secret must contain identity, identity.pub and known_hosts fields.
+                  description: The secret name containing the Git credentials. For HTTPS
+                    repositories the secret must contain username and password fields.
+                    For SSH repositories the secret must contain identity, identity.pub
+                    and known_hosts fields.
                   properties:
                     name:
                       description: Name of the referent
@@ -85,26 +132,31 @@ spec:
                     - name
                   type: object
                 suspend:
-                  description: This flag tells the controller to suspend the reconciliation of this source.
+                  description: This flag tells the controller to suspend the reconciliation
+                    of this source.
                   type: boolean
                 timeout:
                   default: 20s
-                  description: The timeout for remote Git operations like cloning, defaults to 20s.
+                  description: The timeout for remote Git operations like cloning, defaults
+                    to 20s.
                   type: string
                 url:
                   description: The repository URL, can be a HTTP/S or SSH address.
                   pattern: ^(http|https|ssh)://
                   type: string
                 verify:
-                  description: Verify OpenPGP signature for the Git commit HEAD points to.
+                  description: Verify OpenPGP signature for the Git commit HEAD points
+                    to.
                   properties:
                     mode:
-                      description: Mode describes what git object should be verified, currently ('head').
+                      description: Mode describes what git object should be verified,
+                        currently ('head').
                       enum:
                         - head
                       type: string
                     secretRef:
-                      description: The secret name containing the public keys of all trusted Git authors.
+                      description: The secret name containing the public keys of all
+                        trusted Git authors.
                       properties:
                         name:
                           description: Name of the referent
@@ -123,20 +175,24 @@ spec:
               description: GitRepositoryStatus defines the observed state of a Git repository.
               properties:
                 artifact:
-                  description: Artifact represents the output of the last successful repository sync.
+                  description: Artifact represents the output of the last successful
+                    repository sync.
                   properties:
                     checksum:
                       description: Checksum is the SHA1 checksum of the artifact.
                       type: string
                     lastUpdateTime:
-                      description: LastUpdateTime is the timestamp corresponding to the last update of this artifact.
+                      description: LastUpdateTime is the timestamp corresponding to
+                        the last update of this artifact.
                       format: date-time
                       type: string
                     path:
                       description: Path is the relative file path of this artifact.
                       type: string
                     revision:
-                      description: Revision is a human readable identifier traceable in the origin source system. It can be a Git commit SHA, Git tag, a Helm index timestamp, a Helm chart version, etc.
+                      description: Revision is a human readable identifier traceable
+                        in the origin source system. It can be a Git commit SHA, Git
+                        tag, a Helm index timestamp, a Helm chart version, etc.
                       type: string
                     url:
                       description: URL is the HTTP address of this artifact.
@@ -148,23 +204,45 @@ spec:
                 conditions:
                   description: Conditions holds the conditions for the GitRepository.
                   items:
-                    description: "Condition contains details for one aspect of the current state of this API Resource. --- This struct is intended for direct use as an array at the field path .status.conditions.  For example, type FooStatus struct{     // Represents the observations of a foo's current state.     // Known .status.conditions.type are: \"Available\", \"Progressing\", and \"Degraded\"     // +patchMergeKey=type     // +patchStrategy=merge     // +listType=map     // +listMapKey=type     Conditions []metav1.Condition `json:\"conditions,omitempty\" patchStrategy:\"merge\" patchMergeKey:\"type\" protobuf:\"bytes,1,rep,name=conditions\"` \n     // other fields }"
+                    description: "Condition contains details for one aspect of the current
+                    state of this API Resource. --- This struct is intended for direct
+                    use as an array at the field path .status.conditions.  For example,
+                    type FooStatus struct{     // Represents the observations of a
+                    foo's current state.     // Known .status.conditions.type are:
+                    \"Available\", \"Progressing\", and \"Degraded\"     // +patchMergeKey=type
+                    \    // +patchStrategy=merge     // +listType=map     // +listMapKey=type
+                    \    Conditions []metav1.Condition `json:\"conditions,omitempty\"
+                    patchStrategy:\"merge\" patchMergeKey:\"type\" protobuf:\"bytes,1,rep,name=conditions\"`
+                    \n     // other fields }"
                     properties:
                       lastTransitionTime:
-                        description: lastTransitionTime is the last time the condition transitioned from one status to another. This should be when the underlying condition changed.  If that is not known, then using the time when the API field changed is acceptable.
+                        description: lastTransitionTime is the last time the condition
+                          transitioned from one status to another. This should be when
+                          the underlying condition changed.  If that is not known, then
+                          using the time when the API field changed is acceptable.
                         format: date-time
                         type: string
                       message:
-                        description: message is a human readable message indicating details about the transition. This may be an empty string.
+                        description: message is a human readable message indicating
+                          details about the transition. This may be an empty string.
                         maxLength: 32768
                         type: string
                       observedGeneration:
-                        description: observedGeneration represents the .metadata.generation that the condition was set based upon. For instance, if .metadata.generation is currently 12, but the .status.conditions[x].observedGeneration is 9, the condition is out of date with respect to the current state of the instance.
+                        description: observedGeneration represents the .metadata.generation
+                          that the condition was set based upon. For instance, if .metadata.generation
+                          is currently 12, but the .status.conditions[x].observedGeneration
+                          is 9, the condition is out of date with respect to the current
+                          state of the instance.
                         format: int64
                         minimum: 0
                         type: integer
                       reason:
-                        description: reason contains a programmatic identifier indicating the reason for the condition's last transition. Producers of specific condition types may define expected values and meanings for this field, and whether the values are considered a guaranteed API. The value should be a CamelCase string. This field may not be empty.
+                        description: reason contains a programmatic identifier indicating
+                          the reason for the condition's last transition. Producers
+                          of specific condition types may define expected values and
+                          meanings for this field, and whether the values are considered
+                          a guaranteed API. The value should be a CamelCase string.
+                          This field may not be empty.
                         maxLength: 1024
                         minLength: 1
                         pattern: ^[A-Za-z]([A-Za-z0-9_,:]*[A-Za-z0-9_])?$
@@ -177,7 +255,11 @@ spec:
                           - Unknown
                         type: string
                       type:
-                        description: type of condition in CamelCase or in foo.example.com/CamelCase. --- Many .condition.type values are consistent across resources like Available, but because arbitrary conditions can be useful (see .node.status.conditions), the ability to deconflict is important. The regex it matches is (dns1123SubdomainFmt/)?(qualifiedNameFmt)
+                        description: type of condition in CamelCase or in foo.example.com/CamelCase.
+                          --- Many .condition.type values are consistent across resources
+                          like Available, but because arbitrary conditions can be useful
+                          (see .node.status.conditions), the ability to deconflict is
+                          important. The regex it matches is (dns1123SubdomainFmt/)?(qualifiedNameFmt)
                         maxLength: 316
                         pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
                         type: string
@@ -189,15 +271,47 @@ spec:
                       - type
                     type: object
                   type: array
+                includedArtifacts:
+                  description: IncludedArtifacts represents the included artifacts from
+                    the last successful repository sync.
+                  items:
+                    description: Artifact represents the output of a source synchronisation.
+                    properties:
+                      checksum:
+                        description: Checksum is the SHA1 checksum of the artifact.
+                        type: string
+                      lastUpdateTime:
+                        description: LastUpdateTime is the timestamp corresponding to
+                          the last update of this artifact.
+                        format: date-time
+                        type: string
+                      path:
+                        description: Path is the relative file path of this artifact.
+                        type: string
+                      revision:
+                        description: Revision is a human readable identifier traceable
+                          in the origin source system. It can be a Git commit SHA, Git
+                          tag, a Helm index timestamp, a Helm chart version, etc.
+                        type: string
+                      url:
+                        description: URL is the HTTP address of this artifact.
+                        type: string
+                    required:
+                      - path
+                      - url
+                    type: object
+                  type: array
                 lastHandledReconcileAt:
-                  description: LastHandledReconcileAt holds the value of the most recent reconcile request value, so a change can be detected.
+                  description: LastHandledReconcileAt holds the value of the most recent
+                    reconcile request value, so a change can be detected.
                   type: string
                 observedGeneration:
                   description: ObservedGeneration is the last observed generation.
                   format: int64
                   type: integer
                 url:
-                  description: URL is the download link for the artifact output of the last repository sync.
+                  description: URL is the download link for the artifact output of the
+                    last repository sync.
                   type: string
               type: object
           type: object
@@ -205,9 +319,3 @@ spec:
       storage: true
       subresources:
         status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
