--- a/vela-templates/addons/fluxcd/resource/crds/helm-chart.yaml
+++ b/vela-templates/addons/fluxcd/resource/crds/helm-chart.yaml
@@ -2,10 +2,9 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
-  creationTimestamp: null
+    controller-gen.kubebuilder.io/version: v0.5.0
   labels:
-    app.kubernetes.io/instance: vela-system
+    app.kubernetes.io/instance: flux-system
   name: helmcharts.source.toolkit.fluxcd.io
 spec:
   group: source.toolkit.fluxcd.io
@@ -13,6 +12,8 @@ spec:
     kind: HelmChart
     listKind: HelmChartList
     plural: helmcharts
+    shortNames:
+      - hc
     singular: helmchart
   scope: Namespaced
   versions:
@@ -44,10 +45,14 @@ spec:
           description: HelmChart is the Schema for the helmcharts API
           properties:
             apiVersion:
-              description: "APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources"
+              description: 'APIVersion defines the versioned schema of this representation
+              of an object. Servers should convert recognized schemas to the latest
+              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
               type: string
             kind:
-              description: "Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds"
+              description: 'Kind is a string value representing the REST resource this
+              object represents. Servers may infer this from the endpoint the client
+              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
               type: string
             metadata:
               type: object
@@ -55,7 +60,8 @@ spec:
               description: HelmChartSpec defines the desired state of a Helm chart.
               properties:
                 chart:
-                  description: The name or path the Helm chart is available at in the SourceRef.
+                  description: The name or path the Helm chart is available at in the
+                    SourceRef.
                   type: string
                 interval:
                   description: The interval at which to check the Source for updates.
@@ -67,7 +73,8 @@ spec:
                       description: APIVersion of the referent.
                       type: string
                     kind:
-                      description: Kind of the referent, valid values are ('HelmRepository', 'GitRepository', 'Bucket').
+                      description: Kind of the referent, valid values are ('HelmRepository',
+                        'GitRepository', 'Bucket').
                       enum:
                         - HelmRepository
                         - GitRepository
@@ -81,14 +88,28 @@ spec:
                     - name
                   type: object
                 suspend:
-                  description: This flag tells the controller to suspend the reconciliation of this source.
+                  description: This flag tells the controller to suspend the reconciliation
+                    of this source.
                   type: boolean
                 valuesFile:
-                  description: Alternative values file to use as the default chart values, expected to be a relative path in the SourceRef. Ignored when omitted.
+                  description: Alternative values file to use as the default chart values,
+                    expected to be a relative path in the SourceRef. Deprecated in favor
+                    of ValuesFiles, for backwards compatibility the file defined here
+                    is merged before the ValuesFiles items. Ignored when omitted.
                   type: string
+                valuesFiles:
+                  description: Alternative list of values files to use as the chart
+                    values (values.yaml is not included by default), expected to be
+                    a relative path in the SourceRef. Values files are merged in the
+                    order of this list with the last file overriding the first. Ignored
+                    when omitted.
+                  items:
+                    type: string
+                  type: array
                 version:
-                  default: "*"
-                  description: The chart version semver expression, ignored for charts from GitRepository and Bucket sources. Defaults to latest when omitted.
+                  default: '*'
+                  description: The chart version semver expression, ignored for charts
+                    from GitRepository and Bucket sources. Defaults to latest when omitted.
                   type: string
               required:
                 - chart
@@ -99,20 +120,24 @@ spec:
               description: HelmChartStatus defines the observed state of the HelmChart.
               properties:
                 artifact:
-                  description: Artifact represents the output of the last successful chart sync.
+                  description: Artifact represents the output of the last successful
+                    chart sync.
                   properties:
                     checksum:
                       description: Checksum is the SHA1 checksum of the artifact.
                       type: string
                     lastUpdateTime:
-                      description: LastUpdateTime is the timestamp corresponding to the last update of this artifact.
+                      description: LastUpdateTime is the timestamp corresponding to
+                        the last update of this artifact.
                       format: date-time
                       type: string
                     path:
                       description: Path is the relative file path of this artifact.
                       type: string
                     revision:
-                      description: Revision is a human readable identifier traceable in the origin source system. It can be a Git commit SHA, Git tag, a Helm index timestamp, a Helm chart version, etc.
+                      description: Revision is a human readable identifier traceable
+                        in the origin source system. It can be a Git commit SHA, Git
+                        tag, a Helm index timestamp, a Helm chart version, etc.
                       type: string
                     url:
                       description: URL is the HTTP address of this artifact.
@@ -124,23 +149,45 @@ spec:
                 conditions:
                   description: Conditions holds the conditions for the HelmChart.
                   items:
-                    description: "Condition contains details for one aspect of the current state of this API Resource. --- This struct is intended for direct use as an array at the field path .status.conditions.  For example, type FooStatus struct{     // Represents the observations of a foo's current state.     // Known .status.conditions.type are: \"Available\", \"Progressing\", and \"Degraded\"     // +patchMergeKey=type     // +patchStrategy=merge     // +listType=map     // +listMapKey=type     Conditions []metav1.Condition `json:\"conditions,omitempty\" patchStrategy:\"merge\" patchMergeKey:\"type\" protobuf:\"bytes,1,rep,name=conditions\"` \n     // other fields }"
+                    description: "Condition contains details for one aspect of the current
+                    state of this API Resource. --- This struct is intended for direct
+                    use as an array at the field path .status.conditions.  For example,
+                    type FooStatus struct{     // Represents the observations of a
+                    foo's current state.     // Known .status.conditions.type are:
+                    \"Available\", \"Progressing\", and \"Degraded\"     // +patchMergeKey=type
+                    \    // +patchStrategy=merge     // +listType=map     // +listMapKey=type
+                    \    Conditions []metav1.Condition `json:\"conditions,omitempty\"
+                    patchStrategy:\"merge\" patchMergeKey:\"type\" protobuf:\"bytes,1,rep,name=conditions\"`
+                    \n     // other fields }"
                     properties:
                       lastTransitionTime:
-                        description: lastTransitionTime is the last time the condition transitioned from one status to another. This should be when the underlying condition changed.  If that is not known, then using the time when the API field changed is acceptable.
+                        description: lastTransitionTime is the last time the condition
+                          transitioned from one status to another. This should be when
+                          the underlying condition changed.  If that is not known, then
+                          using the time when the API field changed is acceptable.
                         format: date-time
                         type: string
                       message:
-                        description: message is a human readable message indicating details about the transition. This may be an empty string.
+                        description: message is a human readable message indicating
+                          details about the transition. This may be an empty string.
                         maxLength: 32768
                         type: string
                       observedGeneration:
-                        description: observedGeneration represents the .metadata.generation that the condition was set based upon. For instance, if .metadata.generation is currently 12, but the .status.conditions[x].observedGeneration is 9, the condition is out of date with respect to the current state of the instance.
+                        description: observedGeneration represents the .metadata.generation
+                          that the condition was set based upon. For instance, if .metadata.generation
+                          is currently 12, but the .status.conditions[x].observedGeneration
+                          is 9, the condition is out of date with respect to the current
+                          state of the instance.
                         format: int64
                         minimum: 0
                         type: integer
                       reason:
-                        description: reason contains a programmatic identifier indicating the reason for the condition's last transition. Producers of specific condition types may define expected values and meanings for this field, and whether the values are considered a guaranteed API. The value should be a CamelCase string. This field may not be empty.
+                        description: reason contains a programmatic identifier indicating
+                          the reason for the condition's last transition. Producers
+                          of specific condition types may define expected values and
+                          meanings for this field, and whether the values are considered
+                          a guaranteed API. The value should be a CamelCase string.
+                          This field may not be empty.
                         maxLength: 1024
                         minLength: 1
                         pattern: ^[A-Za-z]([A-Za-z0-9_,:]*[A-Za-z0-9_])?$
@@ -153,7 +200,11 @@ spec:
                           - Unknown
                         type: string
                       type:
-                        description: type of condition in CamelCase or in foo.example.com/CamelCase. --- Many .condition.type values are consistent across resources like Available, but because arbitrary conditions can be useful (see .node.status.conditions), the ability to deconflict is important. The regex it matches is (dns1123SubdomainFmt/)?(qualifiedNameFmt)
+                        description: type of condition in CamelCase or in foo.example.com/CamelCase.
+                          --- Many .condition.type values are consistent across resources
+                          like Available, but because arbitrary conditions can be useful
+                          (see .node.status.conditions), the ability to deconflict is
+                          important. The regex it matches is (dns1123SubdomainFmt/)?(qualifiedNameFmt)
                         maxLength: 316
                         pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
                         type: string
@@ -166,7 +217,8 @@ spec:
                     type: object
                   type: array
                 lastHandledReconcileAt:
-                  description: LastHandledReconcileAt holds the value of the most recent reconcile request value, so a change can be detected.
+                  description: LastHandledReconcileAt holds the value of the most recent
+                    reconcile request value, so a change can be detected.
                   type: string
                 observedGeneration:
                   description: ObservedGeneration is the last observed generation.
@@ -181,9 +233,3 @@ spec:
       storage: true
       subresources:
         status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
