--- a/vela-templates/addons/fluxcd/resource/deployment/image-automation-controller.yaml
+++ b/vela-templates/addons/fluxcd/resource/deployment/image-automation-controller.yaml
@@ -4,22 +4,20 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     control-plane: controller
-  name: flux-source-controller
+  name: image-automation-controller
   namespace: flux-system
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: source-controller
-  strategy:
-    type: Recreate
+      app: image-automation-controller
   template:
     metadata:
       annotations:
         prometheus.io/port: "8080"
         prometheus.io/scrape: "true"
       labels:
-        app: source-controller
+        app: image-automation-controller
     spec:
       containers:
         - args:
@@ -28,14 +26,12 @@ spec:
             - --log-level=info
             - --log-encoding=json
             - --enable-leader-election
-            - --storage-path=/data
-            - --storage-adv-addr=source-controller.$(RUNTIME_NAMESPACE).svc.cluster.local.
           env:
             - name: RUNTIME_NAMESPACE
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
-          image: fluxcd/source-controller:v0.15.3
+          image: fluxcd/image-automation-controller:v0.14.0
           imagePullPolicy: IfNotPresent
           livenessProbe:
             httpGet:
@@ -43,37 +39,32 @@ spec:
               port: healthz
           name: manager
           ports:
-            - containerPort: 9090
-              name: http
             - containerPort: 8080
               name: http-prom
             - containerPort: 9440
               name: healthz
+              protocol: TCP
           readinessProbe:
             httpGet:
-              path: /
-              port: http
+              path: /readyz
+              port: healthz
           resources:
             limits:
               cpu: 1000m
               memory: 1Gi
             requests:
-              cpu: 50m
+              cpu: 100m
               memory: 64Mi
           securityContext:
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: true
           volumeMounts:
-            - mountPath: /data
-              name: data
             - mountPath: /tmp
-              name: tmp
+              name: temp
       securityContext:
         fsGroup: 1337
-      serviceAccountName: sa-source-controller
+      serviceAccountName: sa-image-automation-controller
       terminationGracePeriodSeconds: 10
       volumes:
         - emptyDir: { }
-          name: data
-        - emptyDir: { }
-          name: tmp
+          name: temp
