--- a/vela-templates/addons/fluxcd/resource/deployment/kustomize-controller.yaml
+++ b/vela-templates/addons/fluxcd/resource/deployment/kustomize-controller.yaml
@@ -2,8 +2,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
+    app.kubernetes.io/instance: flux-system
     control-plane: controller
   name: kustomize-controller
+  namespace: flux-system
 spec:
   replicas: 1
   selector:
@@ -29,7 +31,7 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
-          image: fluxcd/kustomize-controller:v0.13.0
+          image: fluxcd/kustomize-controller:v0.13.1
           imagePullPolicy: IfNotPresent
           livenessProbe:
             httpGet:
@@ -61,7 +63,7 @@ spec:
               name: temp
       securityContext:
         fsGroup: 1337
-      serviceAccountName: kustomize-controller-serviceaccount
+      serviceAccountName: sa-kustomize-controller
       terminationGracePeriodSeconds: 60
       volumes:
         - emptyDir: { }
