--- a/vela-templates/addons/fluxcd/resource/deployment/notification-controller.yaml
+++ b/vela-templates/addons/fluxcd/resource/deployment/notification-controller.yaml
@@ -4,38 +4,33 @@ metadata:
   labels:
     app.kubernetes.io/instance: flux-system
     control-plane: controller
-  name: flux-source-controller
+  name: flux-notification-controller
   namespace: flux-system
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: source-controller
-  strategy:
-    type: Recreate
+      app: notification-controller
   template:
     metadata:
       annotations:
         prometheus.io/port: "8080"
         prometheus.io/scrape: "true"
       labels:
-        app: source-controller
+        app: notification-controller
     spec:
       containers:
         - args:
-            - --events-addr=http://notification-controller/
             - --watch-all-namespaces
             - --log-level=info
             - --log-encoding=json
             - --enable-leader-election
-            - --storage-path=/data
-            - --storage-adv-addr=source-controller.$(RUNTIME_NAMESPACE).svc.cluster.local.
           env:
             - name: RUNTIME_NAMESPACE
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
-          image: fluxcd/source-controller:v0.15.3
+          image: fluxcd/notification-controller:v0.15.0
           imagePullPolicy: IfNotPresent
           livenessProbe:
             httpGet:
@@ -45,35 +40,32 @@ spec:
           ports:
             - containerPort: 9090
               name: http
+            - containerPort: 9292
+              name: http-webhook
             - containerPort: 8080
               name: http-prom
             - containerPort: 9440
               name: healthz
+              protocol: TCP
           readinessProbe:
             httpGet:
-              path: /
-              port: http
+              path: /readyz
+              port: healthz
           resources:
             limits:
               cpu: 1000m
               memory: 1Gi
             requests:
-              cpu: 50m
+              cpu: 100m
               memory: 64Mi
           securityContext:
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: true
           volumeMounts:
-            - mountPath: /data
-              name: data
             - mountPath: /tmp
-              name: tmp
-      securityContext:
-        fsGroup: 1337
-      serviceAccountName: sa-source-controller
+              name: temp
+      serviceAccountName: sa-notification-controller
       terminationGracePeriodSeconds: 10
       volumes:
         - emptyDir: { }
-          name: data
-        - emptyDir: { }
-          name: tmp
+          name: temp
