--- a/vela-templates/addons/fluxcd/resource/rbac/binding-cluster-admin.yaml
+++ b/vela-templates/addons/fluxcd/resource/rbac/binding-cluster-admin.yaml
@@ -1,6 +1,8 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
+  labels:
+    app.kubernetes.io/instance: flux-system
   name: cluster-reconciler
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -8,8 +10,8 @@ roleRef:
   name: cluster-admin
 subjects:
   - kind: ServiceAccount
-    name: kustomize-controller-serviceaccount
-    namespace: vela-system
+    name: sa-kustomize-controller
+    namespace: flux-system
   - kind: ServiceAccount
-    name: helm-controller-serviceaccount
-    namespace: vela-system
+    name: sa-helm-controller
+    namespace: flux-system
