--- a/vela-templates/addons/fluxcd/resource/rbac/crd-controller.yaml
+++ b/vela-templates/addons/fluxcd/resource/rbac/crd-controller.yaml
@@ -1,38 +1,40 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: crd-controller
+  labels:
+    app.kubernetes.io/instance: flux-system
+  name: cr-crd-controller
 rules:
   - apiGroups:
       - source.toolkit.fluxcd.io
     resources:
-      - "*"
+      - '*'
     verbs:
-      - "*"
+      - '*'
   - apiGroups:
       - kustomize.toolkit.fluxcd.io
     resources:
-      - "*"
+      - '*'
     verbs:
-      - "*"
+      - '*'
   - apiGroups:
       - helm.toolkit.fluxcd.io
     resources:
-      - "*"
+      - '*'
     verbs:
-      - "*"
+      - '*'
   - apiGroups:
       - notification.toolkit.fluxcd.io
     resources:
-      - "*"
+      - '*'
     verbs:
-      - "*"
+      - '*'
   - apiGroups:
       - image.toolkit.fluxcd.io
     resources:
-      - "*"
+      - '*'
     verbs:
-      - "*"
+      - '*'
   - apiGroups:
       - ""
     resources:
