--- a/vela-templates/addons/fluxcd/resource/service/notification-controller.yaml
+++ b/vela-templates/addons/fluxcd/resource/service/notification-controller.yaml
@@ -2,9 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
+    app.kubernetes.io/instance: flux-system
     control-plane: controller
-  name: source-controller
-  namespace: vela-system
+  name: notification-controller
+  namespace: flux-system
 spec:
   ports:
     - name: http
@@ -12,5 +13,5 @@ spec:
       protocol: TCP
       targetPort: http
   selector:
-    app: source-controller
+    app: notification-controller
   type: ClusterIP
