add more test error info fix kustomize registry yaml, fix testdata yaml

--- a/e2e/plugin/testdata/dynamic-sa.yaml
+++ b/e2e/plugin/testdata/dynamic-sa.yaml
@@ -1,8 +1,9 @@
+apiVersion: core.oam.dev/v1beta1
 kind: TraitDefinition
 metadata:
   annotations:
     definition.oam.dev/description: "dynamically specify service account"
-  name: service-account
+  name: dynamic-sa
 spec:
   appliesToWorkloads:
     - deployments.apps
