--- a/vela-templates/registry/auto-gen/kustomize.yaml
+++ b/vela-templates/registry/auto-gen/kustomize.yaml
@@ -8,7 +8,7 @@ metadata:
     definition.oam.dev/description: "kustomize can fetching, building, updating and applying Kustomize manifests from git repo."
 spec:
   workload:
-    type:
+    type: autodetects.core.oam.dev
   schematic:
     cue:
       template: |
